Fix submit button on contact form overflowing to footer on firefox browser by removing font size for text-area in contact form

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -753,7 +753,6 @@ label{
 textarea{
     width: 74%;
     margin-left: 13%;
-    font-size: 1rem;
 }
 
 #contact{
